--- a/style.css
+++ b/style.css
@@ -3,3 +3,27 @@ body {
   height: 100%;
   margin: 0;
 }
+h1{
+  text-align: center;
+}
+img{
+  text-align: center;
+  
+}
+nav{
+  text-align: center;
+  padding-right: 10px;
+  padding-left: 10px;
+  background-color: aliceblue;
+
+
+}
+figcaption{
+  font-size: small;
+  text-align: center;
+}
+
+
+#details {
+
+}
